--- a/sherpa/app/templates/base.html
+++ b/sherpa/app/templates/base.html
@@ -143,7 +143,7 @@
             </div>
             <div class="mdl-card__title">Table (Bottom Left)</div>
             <div class="mdl-card__supporting-text">
-                The table shows every trial including its parameters, the numnber
+                The table shows every trial including its parameters, the number
                 of iterations it has run for and the current best result.
             </div>
             <div class="mdl-card__title">Progress Plot (Bottom Right)</div>
