fix where half the dashboard is missing

--- a/sherpa/app/templates/index.html
+++ b/sherpa/app/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
 
-<div class="mdl-card mdl-shadow--2dp" style="width: auto;">
+<div class="mdl-card mdl-shadow--2dp" style="position: absolute; height: 60%; width: 100%;">
     <div class="mdl-card__title">Experiments</div>
-    <div id="example" class="parcoords" style="height:50%;"></div>
+    <div id="example" class="parcoords" style="height:100%; width: 100%;"></div>
 </div>
 
 <div class="mdl-card mdl-shadow--2dp", id="gridbox">
